[project]
name = "zfs-restic"
version = "0.1.0"
description = "ZFS-aware restic backup and ZFS encryption lock check utilities"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", ".devcontainer", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter if used)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
exclude = ["docs", "\\.devcontainer"]
